<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <com.shijiucheng.konghua.com.shijiucheng.konghua.app.DaoHang_top
            android:id="@+id/dianzu_dh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/ui_forget_banner"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/forget_pwd_banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/biankuangxia"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shop_owner_phone_number"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip"
                    android:textColor="#c22222"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/ui_shop_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_shop_owner_phone_number"
                android:inputType="phone"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textSize="12sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/biankuangxia"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/verify_code_msg"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip"
                    android:textColor="#c22222"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ui_verify_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_verify_code_msg"
                    android:inputType="number"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:singleLine="true"
                    android:textColor="#333333"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/ui_gain_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/biankuangyuanjiao2"
                    android:gravity="center"
                    android:minWidth="90dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/gain_verify_code"
                    android:textColor="@color/zhu"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ui_default_account_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/biankuangxia"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_account"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip"
                    android:textColor="#c22222"
                    android:textSize="14sp" />
            </LinearLayout>

            <com.shijiucheng.konghua.main.widget.MyGridView
                android:id="@+id/ui_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:horizontalSpacing="10dp"
                android:numColumns="3"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:scrollbars="none"
                android:verticalSpacing="10dp"
                android:visibility="visible"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/biankuangxia"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_login_password"
                    android:textColor="#333333"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tip"
                    android:textColor="#c22222"
                    android:textSize="14sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/ui_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/input_new_login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:singleLine="true"
                android:textColor="#333333"
                android:textSize="12sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/ui_commit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/biankuang_login1"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/commit"
            android:textColor="#ffffff"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>