<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="470dp"
        android:background="@mipmap/bg_qrcode">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/follow_official_account"
                android:textColor="@color/bai"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="120dp"
                android:background="@mipmap/bg_qrcode_top"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/notification_send_ontime"
                    android:textColor="@color/zhu"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/avoid_miss_notification"
                    android:textColor="@color/hei"
                    android:textSize="14sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="230dp"
                android:layout_height="240dp"
                android:background="@mipmap/bg_qrcode_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/wechat_scan"
                    android:textColor="@color/zhu"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/pop_to_wechart"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:src="@mipmap/wechart_qrcode" />

                <TextView
                    android:id="@+id/pop_to_wechart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@mipmap/bg_btn_gtiden"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/save_album"
                    android:textColor="@color/bai"
                    android:textSize="14sp" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/water_mark"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:visibility="visible" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/pop_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:src="@mipmap/close" />

</LinearLayout>