<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/order_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number"
            android:textColor="#4c4c4c"
            android:gravity="end"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/order_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:textColor="#4c4c4c"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/grabbing_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grabbing_order"
            android:textColor="@color/zhu"
            android:textSize="12sp" />
    </LinearLayout>

    <View style="@style/ui_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/delivery_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_time"
            android:textColor="#4c4c4c"
            android:gravity="end"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/delivery_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:textColor="#4c4c4c"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#4c4c4c"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expect_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/expect_price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expect_price"
            android:textColor="#4c4c4c"
            android:gravity="end"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/expect_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/zhu"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/delivery_address_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_address"
            android:textColor="#4c4c4c"
            android:gravity="end"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/delivery_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#4c4c4c"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/receiver_information_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_information"
            android:textColor="#4c4c4c"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/receiver_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textColor="#4c4c4c"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>