<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="10dp"
            android:src="@mipmap/btn_back_orange" />

        <LinearLayout
            android:id="@+id/title_view"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/btn_grab_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_grab_order_title_pre"
                android:gravity="center"
                android:text="@string/grab_order"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_request_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_request_price_title_def"
                android:gravity="center"
                android:text="@string/request_price"
                android:textColor="@color/zhu"
                android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4f4f4"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/btn_default_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/default_option"
            android:textColor="@color/zhu"
            android:textSize="14sp" />

        <View
            style="@style/ui_ver_line"
            android:background="#999999" />

        <TextView
            android:id="@+id/btn_delivery_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/delivery_time_asc"
            android:textColor="#6c6c6c"
            android:textSize="14sp" />

        <View
            style="@style/ui_ver_line"
            android:background="#999999" />

        <TextView
            android:id="@+id/btn_order_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/order_amount_asc"
            android:textColor="#6c6c6c"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include
            android:id="@+id/no_data_view"
            layout="@layout/nodtata"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/ordertwo1_smtr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srlAccentColor="@color/hei"
            app:srlEnablePreviewInEditMode="true"
            app:srlPrimaryColor="#ffffff">

            <com.scwang.smartrefresh.layout.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <ListView
                android:id="@+id/grab_order_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:divider="#FEDECA"
                android:dividerHeight="10dp" />

            <com.scwang.smartrefresh.layout.footer.ClassicsFooter
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srlAccentColor="@color/hei"/>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </RelativeLayout>

</LinearLayout>